force-app/main/default/objects/Penalty__c/fields/AmountBRL__c.field-meta.xml
<CustomField>
    <fullName>AmountBRL__c</fullName>
    <label>Amount (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>