force-app/main/default/objects/Penalty__c/fields/AmountChargedBRL__c.field-meta.xml
<CustomField>
    <fullName>AmountChargedBRL__c</fullName>
    <label>Amount Charged (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>