force-app/main/default/objects/Penalty__c/fields/AmountChargedUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountChargedUSD__c</fullName>
    <label>Amount Charged (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>