force-app/main/default/objects/Penalty__c/fields/AmountUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountUSD__c</fullName>
    <label>Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>