force-app/main/default/objects/Penalty__c/fields/DeductionDate__c.field-meta.xml
<CustomField>
    <fullName>DeductionDate__c</fullName>
    <label>Deduction Date</label>
    <type>Date</type>
</CustomField>