force-app/main/default/objects/Penalty__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Annex E</fullName>
                <isActive>false</isActive>
                <label>Annex E</label>
            </value>
            <value>
                <fullName>Contract</fullName>
                <isActive>false</isActive>
                <label>Contract</label>
            </value>
            <value>
                <fullName>Crew Penalties</fullName>
            </value>
            <value>
                <fullName>Fiscal Requirement</fullName>
            </value>
            <value>
                <fullName>Gas Flaring</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>