force-app/main/default/objects/Penalty__c/fields/MonthComp__c.field-meta.xml
<CustomField>
    <fullName>MonthComp__c</fullName>
    <label>Month Comp</label>
    <type>Date</type>
</CustomField>