force-app/main/default/objects/Penalty__c/fields/Subgroup__c.field-meta.xml
<CustomField>
    <fullName>Subgroup__c</fullName>
    <label>Subgroup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Annex E</fullName>
            </value>
            <value>
                <fullName>Authorities</fullName>
            </value>
            <value>
                <fullName>CO2 flaring</fullName>
            </value>
            <value>
                <fullName>Crew</fullName>
                <isActive>false</isActive>
                <label>Crew</label>
            </value>
            <value>
                <fullName>Equipment</fullName>
                <isActive>false</isActive>
                <label>Equipment</label>
            </value>
            <value>
                <fullName>Gas flaring</fullName>
            </value>
            <value>
                <fullName>Gas Humidity</fullName>
                <isActive>false</isActive>
                <label>Gas Humidity</label>
            </value>
            <value>
                <fullName>HSE</fullName>
            </value>
            <value>
                <fullName>Local Content</fullName>
            </value>
            <value>
                <fullName>Oil spill</fullName>
                <label>Oil Spill</label>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Out of Specification</fullName>
            </value>
            <value>
                <fullName>System/Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>