force-app/main/default/objects/Penalty__c/fields/Vessel__c.field-meta.xml
<CustomField>
    <fullName>Vessel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel</label>
    <referenceTo>Vessel__c</referenceTo>
    <relationshipLabel>Penalties</relationshipLabel>
    <relationshipName>Penalties</relationshipName>
    <type>Lookup</type>
</CustomField>