force-app/main/default/objects/Penalty__c/fields/VesselContract__c.field-meta.xml
<CustomField>
    <fullName>VesselContract__c</fullName>
    <label>Vessel Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>