force-app/main/default/objects/Penalty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VesselShortName__c</columns>
    <columns>Group__c</columns>
    <columns>Subgroup__c</columns>
    <columns>Quantity__c</columns>
    <columns>Comments__c</columns>
    <columns>VesselContract__c</columns>
    <columns>Status__c</columns>
    <columns>DeductionDate__c</columns>
    <columns>MonthComp__c</columns>
    <columns>MonthBooked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Administrator</role>
        <role>Commercial</role>
        <role>VesselContractAdministrator</role>
        <role>Vessel_Contract_Read</role>
    </sharedTo>
</ListView>