force-app/main/default/objects/Penalty__c/listViews/MV27.listView-meta.xml
<ListView>
    <fullName>MV27</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Subgroup__c</columns>
    <columns>Status__c</columns>
    <columns>MonthComp__c</columns>
    <columns>AmountBRL__c</columns>
    <columns>AmountChargedBRL__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV27</value>
    </filters>
    <label>MV27</label>
</ListView>