force-app/main/default/objects/Penalty__c/listViews/MV29.listView-meta.xml
<ListView>
    <fullName>MV29</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>AmountUSD__c</columns>
    <columns>AmountBRL__c</columns>
    <columns>MonthComp__c</columns>
    <columns>MonthBooked__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV29</value>
    </filters>
    <label>MV29</label>
</ListView>