force-app/main/default/objects/Penalty__c/listViews/Santos_fleet.listView-meta.xml
<ListView>
    <fullName>Santos_fleet</fullName>
    <columns>NAME</columns>
    <columns>VesselShortName__c</columns>
    <columns>Group__c</columns>
    <columns>Subgroup__c</columns>
    <columns>Status__c</columns>
    <columns>MonthComp__c</columns>
    <columns>MonthBooked__c</columns>
    <columns>AmountChargedBRL__c</columns>
    <columns>AmountChargedUSD__c</columns>
    <columns>DeductionDate__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV20,MV22,MV23,MV24,MV26</value>
    </filters>
    <label>Santos fleet</label>
</ListView>